--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 /*** common style start ***/
+/* *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+} */
 body {
     
     font-family: "Lato", sans-serif;
@@ -18,10 +23,21 @@ body {
 }
 
 /*** common style start ***/
+
+/*** header style start ***/
+.header{
+    background-color: #FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+/*** header style end ***/
+
 /*** nav style start ***/
 nav {
     display: flex;
-    justify-content: space-around;
+    margin: 0px 200px;
+    justify-content: space-between;
 }
 .nav-title{
     color: #181818;
@@ -51,8 +67,15 @@ li > button{
 /*** header style start ***/
 .introduction{
     display: flex;
+    background-image: url(../images/developer.png);
+    /* height: 100%; */
+    background-repeat: no-repeat;
+    align-items: center;
+    padding: 30px 30px 0px 150px;
     justify-content: space-between;
-    position: relative;
+}
+.heading-point{
+    max-width: 500px;
 }
 .introduction > h2{
     color: #474747;
@@ -64,15 +87,41 @@ li > button{
 .nav-btn > .btn-contact{
     color: #FD6E0A;
     background-color: #FFF8F3;
+    font-size: 20px;
+    font-weight: 700;
     padding: 15px 35px;
     border-color: #FD6E0A;
     border-radius: 5px;
-    
 }
-.introduction img{
-    position: absolute;
-    right: 10px;
-    top: 5px;
+.btn-primary > span i {
+  padding-right: 10px;
+}
+.btn-contact > span i {
+  padding-right: 10px;
+  font-size: 20px;
 }
 
 /*** header style end ***/
+
+/*** main style start ***/
+.about{
+    text-align: center;
+    align-items: center;
+    height: 550px;
+    width: 1140px;
+    margin: 130px 0;
+    border-radius: 8px;
+    background-color: #FFF8F3;
+}
+.about-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.about > p{
+    color: #474747;
+    font-size: 18px;
+    text-align: center;
+}
+/*** main style end ***/
