--- a/css/style.css
+++ b/css/style.css
@@ -14,16 +14,46 @@ body {
     color: #FD6E0A;
 }
 
-.btn-primary {
-    color: #FFFFFF;
-    background-color: #FD6E0A;
-    border-radius: 5px;
-    border: 0;
-    font-size: 20px;
-    font-weight: 700;
-    padding: 15px 35px;
+.buttons {
+    margin: 10%;
+    text-align: center;
 }
 
+.btn-hover {
+    width: 200px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    margin: 20px;
+    height: 55px;
+    text-align:center;
+    border: none;
+    background-size: 300% 100%;
+
+    border-radius: 50px;
+    -moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.btn-hover:hover {
+    background-position: 100% 0;
+    -moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.btn-hover:focus {
+    outline: none;
+}
+
+.btn-hover.color-1 {
+    background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673);
+    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
+}
 /*** common style start ***/
 
 /*** header style start ***/
@@ -93,26 +123,37 @@ li>button {
     color: #757575;
 }
 
-.introduction>h2 {
+.introduction> .heading-point h2 {
     color: #474747;
     font-size: 30px;
 }
+.heading-point h1{
+    background-color: #8EC5FC;
+background-image: linear-gradient(62deg, #8EC5FC 0%, #9c55de 100%);
 
-.introduction>h1 {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.introduction> .heading-point h1 {
     color: #181818;
+    
+    text-shadow: 2px 3px 3px (62deg, #8EC5FC 0%, #E0C3FC 100%);
+    font-size: 45px;
+    font-weight: 800;
+}
+.btn-hover.color-3 {
+    background-image: linear-gradient(to right, #667eea, #764ba2, #6B8DD6, #8E37D7);
+    box-shadow: 0 4px 15px 0 rgba(116, 79, 168, 0.75);
 }
 
-.nav-btn>.btn-contact {
-    color: #FD6E0A;
-    background-color: #FFF8F3;
-    font-size: 20px;
-    font-weight: 700;
-    padding: 15px 35px;
-    border-color: #FD6E0A;
-    border-radius: 5px;
+
+
+.btn-hover.color-4 {
+    background-image: linear-gradient(to right, #fc6076, #ff9a44, #ef9d43, #e75516);
+    box-shadow: 0 4px 15px 0 rgba(252, 104, 110, 0.75);
 }
 
-.btn-primary>span i {
+.point-btn-primary>span i {
     padding-right: 10px;
 }
 
@@ -213,6 +254,8 @@ main {
     font-size: 18px;
     /* text-align: justify; */
 }
+
+
 /* what i do style end */
 
 /* my resume start */
@@ -253,66 +296,138 @@ main {
     width: 500px;
     background-color: #757575;
 }
-.btn-primary-special{
-    margin: 0 450px;
-    display: flex;   
-    gap: 20px;
-    color: #FFFFFF;
-    background-color: #FD6E0A;
-    border-radius: 5px;
-    border: 0;
-    font-size: 20px;
-    font-weight: 700;
-    padding: 15px 35px;
+.btn-hover > span > i{
+    padding-right: 20px;
+}
+.btn-hover.color-7 {
+    margin: 0 45%;
+    background-image: linear-gradient(to right, #6253e1, #852D91, #A3A1FF, #F24645);
+    box-shadow: 0 4px 15px 0 rgba(126, 52, 161, 0.75);
 }
 /* my resume end */
 /*** main style end ***/
 
 /* footer start */
+footer{
+    background-color: #474747;
+}
 .footer-connect{
     display: flex;
-    margin: 80px 0px;
+    height: 700px;
+    margin-top: 100px;
+    /* margin: 80px 0px; */
     justify-content: space-evenly;
 }
 .lets-connect{
     width: 500px;
 }
+.lets-connect img path,
+.lets-connect img circle{
+    fill: #b4b4b4;
+    transition: 0.3s all ease-in-out;
+}
+.lets-connect img:hover img path,
+.lets-connect img:hover img circle{
+    filter: drop-shadow(0 0 5px #ffee10);
+}
+.lets-connect img:hover{
+    filter: drop-shadow(0 0 5px #ffee10);
+}
+.lets-connect img:hover{
+    border: #ffee10 solid 2px;
+    box-shadow: 0 0 5px #ffee10,
+    0 0 15px #ffee10 ;
+}
 .lets-connect img{
-    padding-right: 20px;
+    height: 30px;
+    width: 30px;
+    transition: 0.3s all ease-in-out;
+    border-radius: 50%;
+    margin-right: 40px;     
 }
 .lets-connect p{
-    color: #757575;
+    color: #ffffff;
 }
 /* .lets-message{
     width: 500px;
 } */
 
 .lets-connect h2{
-    color: #181818;
+    color: #ffffff;
     /* text-align: center; */
     font-size: 35px;
     font-weight: 700;
 }
-.btn-primary-footer{
-    color: #FFFFFF;
-    background-color: #FD6E0A;
-    border-radius: 5px;
-    border: 0;
-    font-size: 20px;
-    font-weight: 700;
-    padding: 15px 35px;
+.glow-on-hover {
+    width: 220px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:hover:before {
+    opacity: 1;
+}
+
+.glow-on-hover:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
 }
 .lets-message h2{
-    color: #181818;
+    color: #ffffff;
     font-size: 35px;
     font-weight: 700;
 }
 
 
-div {
+/* div {
     margin-bottom: 10px;
-  }
-  input[type=text] {
+  } */
+  /* input[type=text] {
     padding: 5px;
     border: 2px solid #cccccc;
     -webkit-border-radius: 5px;
@@ -328,13 +443,29 @@ div {
     cursor: pointer;
     -webkit-border-radius: 5px;
     border-radius: 5px;
-  }
+  } */
+   /* .form{
+    margin-bottom: 50px;
+   } */
+    .form > div > label{
+        color: #ffffff;
+    }
   .form input{
+    width: 50%;
+
+  }
+.form input, textarea{
+    display: block;
+    
+    margin-bottom: 25px;
+}
+.form input{
+    width: 350px;
     height: 50px;
-    width: 300px;
-  }
-  .input-email{
-    width: 450px;
-  }
+    border-radius: 10px;
+}
+.input-email input{
+    height: 120px;
+}
 
 /* footer end */
