--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,9 @@ body {
 /*** header style start ***/
 .header {
     background-color: #FFF8F3;
-    background-image: url(../images/header_bg.png);
+    background-image: url("../images/header_bg.png"), url("../images/developer.png");
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, top left;
 }
 
 /*** header style end ***/
@@ -107,9 +107,9 @@ li>button {
 /*** header style start ***/
 .introduction {
     display: flex;
-    background-image: url(../images/developer.png);
+    /* background-image: url('../images/developer.png'); */
     /* height: 100%; */
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat; */
     align-items: center;
     padding: 30px 30px 0px 150px;
     justify-content: space-between;
